{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 96,
  "lineage": "5dcc055b-6aec-e009-239e-5f9942c8e9eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:541026056130:instance/i-0bb41db48466361bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb41db48466361bb",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f18:1b20:c200:ceff:549f:4e6a:de45"
            ],
            "key_name": "publiCiencias",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0235551e01fafd124",
            "private_dns": "ip-10-0-101-194.ec2.internal",
            "private_ip": "10.0.101.194",
            "public_dns": "ec2-54-226-170-45.compute-1.amazonaws.com",
            "public_ip": "54.226.170.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0e42e9f486a6a35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0470f05648c9be140",
            "tags": {
              "Name": "Back Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04fb40e4bb7dba800"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.sg_back_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_back_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541026056130:security-group/sg-04fb40e4bb7dba800",
            "description": "Allow http and https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fb40e4bb7dba800",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow HTTP from ipv6",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "back server sg",
            "name_prefix": "",
            "owner_id": "541026056130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0479a087ca8052a9c",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-032403d40fa6ecf81",
            "domain": "vpc",
            "id": "eipalloc-0d01d9d2e19567bb3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03cf7b2ad6f568b91",
            "private_dns": "ip-10-0-101-170.ec2.internal",
            "private_ip": "10.0.101.170",
            "public_dns": "ec2-54-196-243-111.compute-1.amazonaws.com",
            "public_ip": "54.196.243.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-us-east-1a",
              "Owner": "user"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541026056130:internet-gateway/igw-019eeb71a74145371",
            "id": "igw-019eeb71a74145371",
            "owner_id": "541026056130",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d01d9d2e19567bb3",
            "id": "nat-09f7c6169c7b78ab6",
            "network_interface_id": "eni-03cf7b2ad6f568b91",
            "private_ip": "10.0.101.170",
            "public_ip": "54.196.243.111",
            "subnet_id": "subnet-0470f05648c9be140",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-us-east-1a",
              "Owner": "user"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0479a087ca8052a9c",
            "gateway_id": "",
            "id": "r-rtb-05c1c5838f9de77a92750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c1c5838f9de77a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0479a087ca8052a9c",
            "gateway_id": "",
            "id": "r-rtb-05c1c5838f9de77a92750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c1c5838f9de77a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05c1c5838f9de77a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f7c6169c7b78ab6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c1c5838f9de77a9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019eeb71a74145371",
            "id": "r-rtb-045056e1c7cd7fab11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045056e1c7cd7fab1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019eeb71a74145371",
            "id": "r-rtb-045056e1c7cd7fab12750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045056e1c7cd7fab1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05c1c5838f9de77a9",
            "owner_id": "541026056130",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "eigw-0479a087ca8052a9c",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f7c6169c7b78ab6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-private",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-045056e1c7cd7fab1",
            "owner_id": "541026056130",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019eeb71a74145371",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019eeb71a74145371",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-public",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044b977f8d4557caa",
            "route_table_id": "rtb-05c1c5838f9de77a9",
            "subnet_id": "subnet-0bf2c8bd12dd11e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d7f2b175d8ccd5f",
            "route_table_id": "rtb-05c1c5838f9de77a9",
            "subnet_id": "subnet-0a73fe09979b5b5cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9b6b0447c92252",
            "route_table_id": "rtb-045056e1c7cd7fab1",
            "subnet_id": "subnet-0470f05648c9be140"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005e741ac023a6e09",
            "route_table_id": "rtb-045056e1c7cd7fab1",
            "subnet_id": "subnet-00d1e3d1c043a1d50"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541026056130:subnet/subnet-0bf2c8bd12dd11e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bf2c8bd12dd11e66",
            "ipv6_cidr_block": "2600:1f18:1b20:c202::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b09e4dc7009d6c9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541026056130",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-private-us-east-1a",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541026056130:subnet/subnet-0a73fe09979b5b5cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a73fe09979b5b5cf",
            "ipv6_cidr_block": "2600:1f18:1b20:c203::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-03ba616c1205e7a46",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541026056130",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-private-us-east-1b",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541026056130:subnet/subnet-0470f05648c9be140",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0470f05648c9be140",
            "ipv6_cidr_block": "2600:1f18:1b20:c200::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-03c884f70f99fa1aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541026056130",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-public-us-east-1a",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541026056130:subnet/subnet-00d1e3d1c043a1d50",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-00d1e3d1c043a1d50",
            "ipv6_cidr_block": "2600:1f18:1b20:c201::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b2a24862be25e8e5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541026056130",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes-public-us-east-1b",
              "Owner": "user"
            },
            "vpc_id": "vpc-06bf7c29b641ccf16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541026056130:vpc/vpc-06bf7c29b641ccf16",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fb8df6bc10b981f",
            "default_route_table_id": "rtb-0c6964359baa1a7f1",
            "default_security_group_id": "sg-0039d3a479d570ed0",
            "dhcp_options_id": "dopt-ca4312b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06bf7c29b641ccf16",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-053cad5d9558ed28f",
            "ipv6_cidr_block": "2600:1f18:1b20:c200::/56",
            "main_route_table_id": "rtb-0c6964359baa1a7f1",
            "owner_id": "541026056130",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-redes",
              "Owner": "user"
            }
          }
        }
      ]
    }
  ]
}